trunk/Archive2/cc/3c7a74ee58d588/output
+ clang++ -std=c++11 -O0 -W -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:23:14: error: use of overloaded operator '==' is ambiguous (with operand types 'foo' and 'bool')
    (void)(f == true);
           ~ ^  ~~~~
main.cpp:23:14: note: built-in candidate operator==(int, int)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, int)
main.cpp:23:14: note: built-in candidate operator==(float, int)
main.cpp:23:14: note: built-in candidate operator==(long, int)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, int)
main.cpp:23:14: note: built-in candidate operator==(long long, int)
main.cpp:23:14: note: built-in candidate operator==(__int128, int)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, int)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, int)
main.cpp:23:14: note: built-in candidate operator==(long double, int)
main.cpp:23:14: note: built-in candidate operator==(double, int)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, long double)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, long)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(__int128, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, float)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, double)
main.cpp:23:14: note: built-in candidate operator==(unsigned int, float)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, long)
main.cpp:23:14: note: built-in candidate operator==(__int128, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(__int128, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(__int128, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(__int128, __int128)
main.cpp:23:14: note: built-in candidate operator==(__int128, long long)
main.cpp:23:14: note: built-in candidate operator==(__int128, long)
main.cpp:23:14: note: built-in candidate operator==(__int128, long double)
main.cpp:23:14: note: built-in candidate operator==(__int128, double)
main.cpp:23:14: note: built-in candidate operator==(__int128, float)
main.cpp:23:14: note: built-in candidate operator==(long long, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(long long, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, long)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, long double)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, double)
main.cpp:23:14: note: built-in candidate operator==(unsigned __int128, float)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, double)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, long double)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, double)
main.cpp:23:14: note: built-in candidate operator==(unsigned long long, float)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, __int128)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, long long)
main.cpp:23:14: note: built-in candidate operator==(long long, long long)
main.cpp:23:14: note: built-in candidate operator==(unsigned long, long double)
main.cpp:23:14: note: built-in candidate operator==(double, long long)
main.cpp:23:14: note: built-in candidate operator==(long double, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(long double, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(long double, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(long double, __int128)
main.cpp:23:14: note: built-in candidate operator==(long double, long long)
main.cpp:23:14: note: built-in candidate operator==(long double, long)
main.cpp:23:14: note: built-in candidate operator==(long double, long double)
main.cpp:23:14: note: built-in candidate operator==(long double, double)
main.cpp:23:14: note: built-in candidate operator==(long double, float)
main.cpp:23:14: note: built-in candidate operator==(double, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(double, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(double, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(double, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(double, __int128)
main.cpp:23:14: note: built-in candidate operator==(long double, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(double, long)
main.cpp:23:14: note: built-in candidate operator==(double, long double)
main.cpp:23:14: note: built-in candidate operator==(double, double)
main.cpp:23:14: note: built-in candidate operator==(double, float)
main.cpp:23:14: note: built-in candidate operator==(float, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(float, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(float, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(float, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(float, __int128)
main.cpp:23:14: note: built-in candidate operator==(float, long long)
main.cpp:23:14: note: built-in candidate operator==(float, long)
main.cpp:23:14: note: built-in candidate operator==(float, long double)
main.cpp:23:14: note: built-in candidate operator==(float, double)
main.cpp:23:14: note: built-in candidate operator==(long, long)
main.cpp:23:14: note: built-in candidate operator==(long long, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(long long, __int128)
main.cpp:23:14: note: built-in candidate operator==(float, float)
main.cpp:23:14: note: built-in candidate operator==(long long, long)
main.cpp:23:14: note: built-in candidate operator==(long long, long double)
main.cpp:23:14: note: built-in candidate operator==(long long, double)
main.cpp:23:14: note: built-in candidate operator==(long long, float)
main.cpp:23:14: note: built-in candidate operator==(long, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(long, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(long, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(long, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(long, __int128)
main.cpp:23:14: note: built-in candidate operator==(long, long long)
main.cpp:23:14: note: built-in candidate operator==(long long, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(long, long double)
main.cpp:23:14: note: built-in candidate operator==(long, double)
main.cpp:23:14: note: built-in candidate operator==(long, float)
main.cpp:23:14: note: built-in candidate operator==(int, unsigned __int128)
main.cpp:23:14: note: built-in candidate operator==(int, unsigned long long)
main.cpp:23:14: note: built-in candidate operator==(int, unsigned long)
main.cpp:23:14: note: built-in candidate operator==(int, unsigned int)
main.cpp:23:14: note: built-in candidate operator==(int, __int128)
main.cpp:23:14: note: built-in candidate operator==(int, long long)
main.cpp:23:14: note: built-in candidate operator==(int, long)
main.cpp:23:14: note: built-in candidate operator==(int, long double)
main.cpp:23:14: note: built-in candidate operator==(int, double)
main.cpp:23:14: note: built-in candidate operator==(int, float)
1 error generated.
